Config: optional MySQL SSL/TLS - driven by REPORTING_DB_CA_CRT
If REPORTING_DB_CA_CRT is set, set sslverify: true and set sslca to the content of this variable

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,5 @@ production:
   database: <%= ENV['REPORTING_DB_NAME'] %>
   host: <%= ENV['REPORTING_DB_HOST'] %>
   port: <%= ENV['REPORTING_DB_PORT'] %>
+  sslverify: <%= ENV['REPORTING_DB_CA_CRT'] != nil %>
+  sslca: <%= ENV['REPORTING_DB_CA_CRT'] %>
