Updating distribution files (#736)

--- a/.github/workflows/sync-development.yml
+++ b/.github/workflows/sync-development.yml
@@ -19,4 +19,5 @@ jobs:
         with:
           SHA: ${{ github.sha }}
           ROLE: ${{ secrets.ROLE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           APP: reporting-service
