Automatically added GitHub issue links to TODOs (#730)
Co-authored-by: Terraform <fishwhack9000+terraform@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ require:
   - rubocop-performance
   - rubocop-rails
   # TODO: turning this on breaks alot of tests. must be the given -> let change
+  # Issue URL: https://github.com/ausaccessfed/reporting-service/issues/726
   # - rubocop-rspec
 
 AllCops:
