--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "discovery-service",
   "private": true,
-  "dependencies": {},
   "version": "0.1.0",
   "devDependencies": {
+    "@lavamoat/preinstall-always-fail": "2.1.1",
     "eslint": "9.36.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-import": "2.32.0",
-    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-yml": "1.18.0",
     "prettier": "3.6.2"
   },
   "scripts": {
     "lint": "eslint . --quiet"
-  }
+  },
+  "packageManager": "yarn@4.10.2"
 }
